# goose

./: AGENTS.md
crates/goose/: Cargo.toml  FEATURES.md
crates/goose-lite/: Cargo.toml  README.md
crates/goose-lite/src/: lib.rs
crates/goose-lite/tests/: smoke.rs
crates/goose-mcp/: Cargo.toml
crates/goose-mcp-lite/: Cargo.toml  README.md
crates/goose-mcp-lite/src/: lib.rs
crates/goose-mcp-lite/tests/: smoke.rs
crates/goose-mcp/src/: lib.rs  mcp_server_runner.rs
crates/goose/src/: lib.rs  posthog.rs
crates/goose/src/providers/: base.rs  init.rs  mod.rs
crates/goose/src/providers/formats/: mod.rs
crates/goose/tests/: providers.rs
