[package]
name = "goose-mcp-lite"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Lightweight MCP surface for Goose integrations"

[lints]
workspace = true

[dependencies]
goose-mcp = { path = "../goose-mcp", default-features = false, features = ["lite"] }
