[package]
name = "goose-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[lints]
workspace = true

[dependencies]
rmcp = { workspace = true, features = ["server", "client", "transport-io", "macros"] }
anyhow = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true, features = ["io-util"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing-appender = { workspace = true }
url = { workspace = true }
base64 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
shellexpand = { workspace = true }
indoc = { workspace = true }
xcap = "=0.4.0"
reqwest = { workspace = true, features = ["json", "rustls-tls-native-roots", "system-proxy"], default-features = false }
chrono = { workspace = true }
etcetera = { workspace = true }
tempfile = { workspace = true }
include_dir = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
ignore = { workspace = true }
lopdf = { version = "0.36.0", optional = true }
docx-rs = { version = "0.4.7", optional = true }
image = { version = "0.24.9", features = ["jpeg"] }
umya-spreadsheet = { version = "2.2.3", optional = true }
which = {workspace = true}
lru = { workspace = true }
tree-sitter = "0.26"
tree-sitter-python = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-javascript = "0.25"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23"
tree-sitter-kotlin-ng = "1.1"
tree-sitter-swift = "0.7"
tree-sitter-ruby = "0.23"
rayon = "1.10"
libc = "0.2"
# TODO: Fork mpatch or replace with a custom implementation using `similar` crate
# for fuzzy patch matching. Current crate has limited maintenance (single maintainer,
# ~1000 downloads). Pinned to exact version to prevent supply chain attacks.
mpatch = "=0.2.0"
tokio-util = { workspace = true }

[dev-dependencies]
serial_test = { workspace = true }

[features]
default = ["builtin-all"]
builtin-all = [
    "builtin-developer",
    "builtin-autovisualiser",
    "builtin-computercontroller",
    "builtin-memory",
    "builtin-tutorial",
]
lite = ["builtin-developer"]
builtin-developer = []
builtin-autovisualiser = []
builtin-computercontroller = [
    "dep:lopdf",
    "dep:docx-rs",
    "dep:umya-spreadsheet",
]
builtin-memory = []
builtin-tutorial = []
